--- a/src/main/resources/LabelsBundle.properties
+++ b/src/main/resources/LabelsBundle.properties
@@ -33,6 +33,9 @@ loading.history.from = Loading history from
 queue.remove.all = Remove All
 queue.validation = Are you sure you want to remove all elements from the queue?
 queue.remove.selected = Remove Selected
+queue.move.top = Move to Top
+queue.move.up = Move Up
+queue.move.down = Move Down
 
 # History
 re-rip.checked = Re-rip Checked
