Add active downloads panel with cancel controls

--- a/src/main/resources/LabelsBundle.properties
+++ b/src/main/resources/LabelsBundle.properties
@@ -37,6 +37,12 @@ queue.move.top = Move to Top
 queue.move.up = Move Up
 queue.move.down = Move Down
 
+# Active downloads
+active.downloads = Active downloads
+active.domain = Domain
+active.none = No active downloads
+cancel = Cancel
+
 # History
 re-rip.checked = Re-rip Checked
 remove = Remove
