Tighten active downloads list spacing and show current item

--- a/src/main/resources/LabelsBundle.properties
+++ b/src/main/resources/LabelsBundle.properties
@@ -40,6 +40,7 @@ queue.move.down = Move Down
 # Active downloads
 active.downloads = Active downloads
 active.domain = Domain
+active.current_file = Currently
 active.none = No active downloads
 cancel = Cancel
 
